resolved bug in get; change return of chief from id to email; added updated api
